2014-02-21  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.messages.R (test.message): Add a test for
	  the deprecated group feature which works fine with RProtoBuf.
	  The type is converted to lower case, which users often forget.
	* vignettes/RProtoBuf-intro.Rnw (subsection{Deprecated Feature:
	  Protocol Buffer Groups}): document groups.
	* inst/CITATION: Add a manual CITATION file pointing to the JSS
	  preprint on arxiv.org in addition to the normal auto-generated
	  citation().

2014-01-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Finalize release 0.4.0 with initial Windows support

	* src/S4_classes.h: Adapt to S4 access function renaming in Rcpp
	0.10.7 and later, with special thanks to Kevin Ushey

2014-01-13  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.int64.R (test.int64): Skip this test with a
	  warning if running on a machine with sizeof(long long) < 8.
	* vignettes/RProtoBuf-intro.Rnw (subsection{64-bit integer
	  issues}): Hide 64-bit field accesses with if conditional to
	  avoid running code that won't work on platforms without 64-bit
	  long longs.
	* DESCRIPTION (Version): Increment to 0.4.0

2014-01-09  Murray Stokely  <mstokely@google.com>

	* R/read.R: Add a logical argument 'partial' to readASCII that
	  accepts uninitialized message fragments.
	* src/wrapper_Descriptor.cpp (rprotobuf): Idem
	* inst/unitTests/runit.addressbook.R (test.ascii): Add tests for above.

2014-01-04  Murray Stokely  <mstokely@google.com>

	* R/wrapper_CodedInputStream.R: Accept numeric size arguments for
	  ReadRaw and ReadString to make this more user friendly for
	  interactive use by calling as.integer() as needed.
	* R/00classes.R (P): Add missing object prameters in
	  ZeroCopyInputStream calls to ReadRaw and ReadString.
	* inst/unitTests/data/encoding.proto: Add example messages used in
	  the encoding documentation.
	* inst/unitTests/runit.serialize.R (test.encoding): Add tests